syntax = "proto3";
package qpcmd;

// 通用返回
message RepRet {
  int32 code = 1;
  string error = 2;
}

// 注册码
message ReqRegisterCode {
  string phone = 1;
}

//注册账号
message ReqRegisterAccount {
  int32 moduleID = 1;       //模块标识
  int32 plazaVersion = 2;   //广场版本
  int32 deviceType = 3;     //设备类型
  uint32 userID = 4;
  string logonPass = 5;     //登录密码
  string account = 6;       //登录帐号
  string nickName = 7;      //用户昵称
  string spreaderCode = 8;
  string verifyCode = 9;
  string machineID = 10;    //机器标识
}

//重置密码
message ReqResetPasswd {
  string phone = 1;
  string code = 2;
  string passwd = 3;
}
